syntax = "proto3";
option java_multiple_files = true;

package grpc.service.param;

message Result {
  int32 status = 1;
  string message = 2;
}

message Data {
  string code = 1;
  string value = 2;
  string type = 3;
  string description = 4;
  string createdDate = 5;
  string modifiedDate = 6;
  string createdBy = 7;
  string modifiedBy = 8;
}

message DetailParamRequest {
  string code = 1;
}

message DetailParamResponse {
  Result result = 1;
  Data data = 2;
}

service SystemParamService {
  rpc findParamByCode(DetailParamRequest) returns (DetailParamResponse);
}